--- a/.env
+++ b/.env
@@ -1,3 +1,8 @@
 PORT = 4000
 DB_URL = "mongodb://localhost:27017/project1"
 BASE_URL = "http://localhost:4000"
+MAILTRAP_HOST = "sandbox.smtp.mailtrap.io"
+MAILTRAP_USERNAME = "ca99c15dee2b41"
+MAILTRAP_PASSWORD = "befc060c4e3ea8"
+MAILTRAP_PORT = "2525"
+MAILTRAP_PASSWORD =""
