--- a/.env
+++ b/.env
@@ -5,4 +5,4 @@ MAILTRAP_HOST = "sandbox.smtp.mailtrap.io"
 MAILTRAP_USERNAME = "ca99c15dee2b41"
 MAILTRAP_PASSWORD = "befc060c4e3ea8"
 MAILTRAP_PORT = "2525"
-JWT_SECERET = "thisISMYtoken"
+JWT_SECRET = "thisISMYtoken"
